<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_activity_detail_movie">Detail Movie</string>
    <string name="title">Title</string>
    <string name="movie">Movies</string>
    <string name="favorite_movie">Movie</string>
    <string name="favorite">Favorites</string>
    <string name="tv_show">TV Shows</string>
    <string name="favorite_tv_show">TV Show</string>
    <string name="release_date">Release</string>
    <string name="synopsis">Synopsis</string>
    <string name="share_title">Share This Application Now</string>
    <string name="share_text">Watch %s movies on Netflix.com</string>
    <string name="name">Wahyu Widodo</string>
    <string name="movie_poster">movie poster</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="overview">Overview</string>
    <string name="undo">Cancel delete favorite?</string>
    <string name="ok">OK</string>
    <string name="menu_asc">Title (A-Z)</string>
    <string name="menu_des">Title (Z-A)</string>
    <string name="menu_random">Random</string>
</resources>