<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/movieFragment">

    <fragment
        android:id="@+id/movieFragment"
        android:name="com.why.movieCatalogue.ui.movie.MovieFragment"
        android:label="@string/movie"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/tvShowFragment"
        android:name="com.why.movieCatalogue.ui.tvShow.TvShowFragment"
        android:label="@string/tv_show"
        tools:layout="@layout/fragment_tv_show" />

    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.why.movieCatalogue.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>